# voicebot

./: README.md  docker-compose.yml  main.py  outbound_call.py  pyproject.toml
view/: index.html
